test/Fail/Issue2067.err
Issue2067.agda:15.9-10: error: [UnequalTypes]
The type
  Nat
is not a subtype of
  M.A (m + 1)
when checking that the expression m has type M.A (m + 1)
